[package]
name = "topo"
version = "0.1.0"
authors = ["Jared Forsyth <jared@jaredforsyth.com>"]
edition = "2018"

[dependencies]
kiss3d = { path = "./kiss3d-master", features = [ "conrod" ]  }
# three = "*"
stl = { git = "https://github.com/eholk/rust-stl" }
gdal = "*"
geo = "*"
nalgebra = "*"
conrod = "*"
rand = "*"
ncollide3d = "*"